--- a/.github/workflows/remote_build_server.yml
+++ b/.github/workflows/remote_build_server.yml
@@ -21,6 +21,7 @@ jobs:
           chmod 0600 $HOME/.ssh/authorized_keys
           find ~/.ssh -ls
           whoami && id
+          ssh -v ${USER}@127.0.0.1 uptime
 
       - name: Run ansible
         env:
