--- a/.github/workflows/remote_build_server.yml
+++ b/.github/workflows/remote_build_server.yml
@@ -22,8 +22,8 @@ jobs:
           chmod 0600 $HOME/.ssh/authorized_keys
           find ~/.ssh -ls
           whoami && id
-          sudo cat /etc/ssh/sshd_config | grep -v ^# | uniq
-          ssh -v ${USER}@127.0.0.1 uptime
+          sudo cat /etc/ssh/sshd_config
+          ssh -i $HOME/.ssh/id_rsa -v ${USER}@127.0.0.1 uptime
 
       - name: Run ansible
         env:
