--- a/.github/workflows/remote_build_server.yml
+++ b/.github/workflows/remote_build_server.yml
@@ -22,9 +22,9 @@ jobs:
           chmod 0600 $HOME/.ssh/authorized_keys
           find ~/.ssh -ls
           whoami && id
-          sudo cat /etc/ssh/sshd_config
-          sudo cat /etc/ssh/ssh_config
-          ssh -i $HOME/.ssh/id_rsa -v ${USER}@127.0.0.1 uptime
+          #sudo cat /etc/ssh/sshd_config
+          #sudo cat /etc/ssh/ssh_config
+          ssh -o "IdentitiesOnly=yes" -i $HOME/.ssh/id_rsa -v ${USER}@127.0.0.1 uptime
 
       - name: Run ansible
         env:
