--- a/.github/workflows/remote_build_server.yml
+++ b/.github/workflows/remote_build_server.yml
@@ -21,9 +21,8 @@ jobs:
           cp $HOME/.ssh/id_rsa.pub $HOME/.ssh/authorized_keys
           chmod 0600 $HOME/.ssh/authorized_keys
           find ~/.ssh -ls
-          whoami && id
-          sudo systemctl restart sshd
-          ssh -o StrictHostKeyChecking=no -o "IdentitiesOnly=yes" -i $HOME/.ssh/id_rsa -v ${USER}@127.0.0.1 uptime
+          #sudo systemctl restart sshd
+          ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -i $HOME/.ssh/id_rsa -v ${USER}@localhost uptime
 
       - name: Run ansible
         env:
