--- a/.github/workflows/remote_build_server.yml
+++ b/.github/workflows/remote_build_server.yml
@@ -17,7 +17,9 @@ jobs:
       - name: Create ssh key and add it to authorized keys
         run: |
           set -x
-          ls -ld /home/runner
+          ls -ld /home/$USER
+          chmod 0700 /home/$USER
+          ls -ld /home/$USER
           install -m 0700 -d $HOME/.ssh && ssh-keygen -b 2048 -t rsa -f $HOME/.ssh/id_rsa -q -N ""
           cp $HOME/.ssh/id_rsa.pub $HOME/.ssh/authorized_keys
           chmod 0600 $HOME/.ssh/authorized_keys
