--- a/.github/workflows/remote_build_server.yml
+++ b/.github/workflows/remote_build_server.yml
@@ -21,11 +21,13 @@ jobs:
           install -m 0700 -d $HOME/.ssh && ssh-keygen -b 2048 -t rsa -f $HOME/.ssh/id_rsa -q -N ""
           cp $HOME/.ssh/id_rsa.pub $HOME/.ssh/authorized_keys
           chmod 0600 $HOME/.ssh/authorized_keys
-          ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ${USER}@localhost uptime
+          #ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null ${USER}@localhost uptime
+          ssh -o StrictHostKeyChecking=no ${USER}@localhost uptime
 
       - name: Run ansible
         run: |
           export REMOTE_USER="${USER}"
           export REMOTE_IP="localhost"
+          #export ANSIBLE_HOST_KEY_CHECKING=False
           cd tools/create_remote_build_server
           ./build_remote_ssh_ubuntu.sh
