--- a/.github/workflows/remote_build_server.yml
+++ b/.github/workflows/remote_build_server.yml
@@ -23,14 +23,14 @@ jobs:
 
       - name: Install Ansible packages
         run: |
-          apt update
-          apt install -y python-jmespath
+          sudo apt update
+          sudo apt install -y python-jmespath
 
       - name: Run ansible
         run: |
           export REMOTE_USER="${USER}"
           export REMOTE_IP="localhost"
-          export ANSIBLE_TAGS_SKIP=""
-          export TAGS_SKIP=""
+          export ANSIBLE_TAGS_SKIP="actions-runner_registration"
+          export TAGS_SKIP="actions-runner_registration"
           cd tools/create_remote_build_server
           ./build_remote_ssh_ubuntu.sh
