--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,11 +20,6 @@ jobs:
     name: "*"
     runs-on: ubuntu-latest
     env:
-      PACKER_IMAGES_OUTPUT_DIR: ${{ env.PACKER_IMAGES_OUTPUT_DIR }}
-      PACKER_CACHE_DIR: ${{ env.PACKER_CACHE_DIR }}
-      LOGDIR: ${{ env.LOGDIR }}
-      VAGRANT_CLOUD_USER: ${{ env.VAGRANT_CLOUD_USER }}
-      VAGRANT_CLOUD_TOKEN: ${{ secrets.VAGRANT_CLOUD_TOKEN }}
     strategy:
       max-parallel: 2
       matrix:
@@ -57,8 +52,10 @@ jobs:
         if: env.skip == false
         run: |
           date
+          echo $PACKER_IMAGES_OUTPUT_DIR
 
       - name: Test ${{ matrix.stage }}
         if: env.skip
         run: |
           echo "test 1234"
+          echo $PACKER_IMAGES_OUTPUT_DIR
