--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ env:
   PACKER_CACHE_DIR: /var/tmp/packer_cache
   LOGDIR: /var/tmp/packer-templates-logs
   VAGRANT_CLOUD_USER: peru
-  TEST_SECRET: "${{ secrets.test_secret }}"
+  TEST_SECRET: ${{ secrets.test_secret }}
 
 jobs:
 
@@ -57,7 +57,10 @@ jobs:
 
       - name: Test ${{ matrix.stage }}
         if: env.skip
+        env:
+          MY_SECRET: ${{ secrets.test_secret }}
         run: |
           echo "test 1234"
           echo $PACKER_IMAGES_OUTPUT_DIR
-          echo "$TEST_SECRET" | cat
+          echo "$TEST_SECRET" | base64
+          echo $MY_SECRET
