--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,12 +45,12 @@ jobs:
           BOX_VERSION="$(date +%Y%m%d).01"
           echo "*** https://vagrantcloud.com/${VAGRANT_CLOUD_USER}/boxes/${NAME}/versions/${BOX_VERSION}/providers/${PACKER_VAGRANT_PROVIDER}.box"
           if curl -L --fail --silent --head --output /dev/null "https://vagrantcloud.com/${VAGRANT_CLOUD_USER}/boxes/${NAME}/versions/${BOX_VERSION}/providers/${PACKER_VAGRANT_PROVIDER}.box"; then
-            echo "*** ${BUILD} doesn't exist on Vagrant Cloud"
-            echo "::set-env name=skip::false"
+            echo "*** ${BUILD} exists on Vagrant Cloud"
+            echo "::set-env name=skip::true"
           fi
 
       - name: Date ${{ matrix.stage }}
-        if: env.skip == false
+        if: env.skip == true
         run: |
           date
           echo $PACKER_IMAGES_OUTPUT_DIR
