--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,7 @@
 name: build - vagrantcloud
 
 on:
-  push:
-  # repository_dispatch:
+  repository_dispatch:
 
 env:
   PACKER_IMAGES_OUTPUT_DIR: /var/tmp/packer-templates-images
