--- a/.github/workflows/env-check.yml
+++ b/.github/workflows/env-check.yml
@@ -45,6 +45,7 @@ jobs:
             mylabs.dev
         run: |
           set -x
+          exit 1
           #echo "${TEST}"
           #echo "${TEST}" | paste -s -d\|
           #echo "${TEST}" | paste -s -d"|"
