--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -1,9 +1,15 @@
 name: release
 
+# on:
+#   push:
+#     tags:
+#       - 'v*'
+
 on:
-  push:
-    tags:
-      - 'v*'
+  # push:
+  # pull_request:
+  release:
+    types: [published]
 
 jobs:
   build_latex:
@@ -12,20 +18,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: test123
-          release_name: Release test123
-          draft: false
-          prerelease: false
-
       - name: debug
         run: |
-          echo "${{ steps.create_release.outputs.upload_url }}"
+          echo "${{ github.event.release.upload_url }}"
 
       - name: Upload Release Asset - pdf
         id: upload-release-asset-pdf
@@ -33,7 +28,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          upload_url: ${{ github.event.release.upload_url }}
           asset_path: atom_cheatsheet.pdf
           asset_name: atom_cheatsheet.pdf
           asset_content_type: application/pdf
@@ -44,7 +39,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          upload_url: ${{ github.event.release.upload_url }}
           asset_path: atom_cheatsheet.svg
           asset_name: atom_cheatsheet.svg
           asset_content_type: image/svg+xml
@@ -55,7 +50,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          upload_url: ${{ github.event.release.upload_url }}
           asset_path: atom_cheatsheet.png
           asset_name: atom_cheatsheet.png
           asset_content_type: image/png
@@ -66,7 +61,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          upload_url: ${{ github.event.release.upload_url }}
           asset_path: atom_cheatsheet.jpg
           asset_name: atom_cheatsheet.jpg
           asset_content_type: image/jpg
