--- a/.github/workflows/gh-action-test.yml
+++ b/.github/workflows/gh-action-test.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-18.04
 
     steps:
-      - uses: ruzickap/action-test
+      - uses: ruzickap/action-test@master
         with:
           exclude: |
             test12
