--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -1,17 +1,18 @@
 name: shellcheck
 
 on:
-  pull_request:
-    types: [opened, synchronize]
-    paths:
-      - '**.sh'
-      - .github/workflows/shellcheck.yml
-  push:
-    branches:
-      - master
-    paths:
-      - '**.sh'
-      - .github/workflows/shellcheck.yml
+  repository_dispatch:
+#  pull_request:
+#    types: [opened, synchronize]
+#    paths:
+#      - '**.sh'
+#      - .github/workflows/shellcheck.yml
+#  push:
+#    branches:
+#      - master
+#    paths:
+#      - '**.sh'
+#      - .github/workflows/shellcheck.yml
 
 jobs:
   shellcheck-check:
