--- a/.github/workflows/gh-action-test.yml
+++ b/.github/workflows/gh-action-test.yml
@@ -10,6 +10,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          submodules: true
       - uses: ruzickap/action-test@master
         with:
           exclude: |
