--- a/.github/workflows/remote_build_server.yml
+++ b/.github/workflows/remote_build_server.yml
@@ -32,4 +32,4 @@ jobs:
           export REMOTE_IP="localhost"
           export ANSIBLE_HOST_KEY_CHECKING=False
           export ANSIBLE_SKIP_TAGS="actions-runner_registration,actions-runner_installation"
-          ansible-playbook -i "$REMOTE_IP," -e "ansible_sudo_pass=$USER_PASSWORD" --user "$REMOTE_USER" ansible/main.yml
+          ansible-playbook -vvvv -i "$REMOTE_IP," -e "ansible_sudo_pass=$USER_PASSWORD" --user "$REMOTE_USER" ansible/main.yml
