--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -5,7 +5,7 @@
   tasks:
     - name: Update repositories for Debian based distros
       apt:
-        force_apt_get: yes
+        # force_apt_get: yes
         update_cache: yes
       when: ansible_os_family == 'Debian'
       changed_when: false
