--- a/.github/workflows/remote_build_server.yml
+++ b/.github/workflows/remote_build_server.yml
@@ -25,6 +25,7 @@ jobs:
         run: |
           sudo apt update
           sudo apt install -y ansible python-jmespath python3-apt
+          grep -v ^# /etc/apt/sources.list | uniq
 
       - name: Run Ansible
         run: |
