--- a/.github/workflows/remote_build_server.yml
+++ b/.github/workflows/remote_build_server.yml
@@ -23,9 +23,12 @@ jobs:
 
       - name: Install Ansible packages
         run: |
+          set -x
           sudo apt update
           sudo apt install -y ansible python-jmespath python3-apt
           grep -v ^# /etc/apt/sources.list | uniq
+          ls -la /etc/apt/sources.list.d
+          cat /etc/apt/sources.list.d/*
 
       - name: Run Ansible
         run: |
