--- a/.github/workflows/env-check.yml
+++ b/.github/workflows/env-check.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Env test
+      - name: Env test 123
         env:
           INPUT_URL: https://${{ github.event.repository.owner.name }}.github.io/${{ github.event.repository.name }}
         run: echo "${INPUT_URL}"
