--- a/.github/workflows/vuepress-build-check-deploy.yml
+++ b/.github/workflows/vuepress-build-check-deploy.yml
@@ -22,6 +22,7 @@ jobs:
         with:
           files: .
           config_file: .markdownlint.yml
+          ignore_files: CHANGELOG.md
 
   markdown-spell-check:
     runs-on: ubuntu-latest
