--- a/main.yml
+++ b/main.yml
@@ -14,7 +14,7 @@
         validate: 'visudo -cf %s'
       become: yes
 
-    - include: tasks/{{ ansible_distribution }}.yml
+#    - include: tasks/{{ ansible_distribution }}.yml
 
   handlers:
     - name: grub2 config
