--- a/.github/workflows/mac-fedora.yml
+++ b/.github/workflows/mac-fedora.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Fedora
         run: |
-          brew install vagrant
+          brew cask install vagrant
           vagrant init fedora/32-cloud-base
           vagrant up
           ansible-playbook --diff --user="vagrant" --extra-vars "ansible_password=vagrant ansible_become_password=vagrant ansible_port=2222" main.yml -i "127.0.0.1,"
