--- a/.github/workflows/mac-fedora.yml
+++ b/.github/workflows/mac-fedora.yml
@@ -17,9 +17,29 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Fedora
+      - name: Checks
         run: |
-          brew cask install vagrant
+          free -h
+          df -h
+
+      - name: Install Ansible packages
+        run: |
+          pip3 install --user ansible
+          ln -s /Users/runner/Library/Python/3.7/bin/ansible /usr/local/bin/ansible
+          ln -s /Users/runner/Library/Python/3.7/bin/ansible-playbook /usr/local/bin/ansible-playbook
+
+      - name: Stat Fedora VirtualBox VM
+        env:
+          RAM: 2048
+        run: |
           vagrant init fedora/32-cloud-base
+          sed -i "/Vagrant.configure(\"2\") do |config|/a \ \ config.vm.provider \"virtualbox\" do |vb|\n \ \ \ \ vb.memory = \"${RAM}\"\n \ end" Vagrantfile
           vagrant up
-          ansible-playbook --diff --user="vagrant" --extra-vars "ansible_password=vagrant ansible_become_password=vagrant ansible_port=2222" main.yml -i "127.0.0.1,"
+
+      - name: Add main user to Fedora VirtualBox VM
+        run: |
+          ansible --become --user vagrant --extra-vars "ansible_password=vagrant ansible_port=2222" -m user -a "name=${MYUSER} password={{ \"${PASSWORD}\" | password_hash('sha512') }} append=yes groups=wheel" -i "127.0.0.1," 127.0.0.1
+
+      - name: Ansible
+        run: |
+          ansible-playbook --user="${MYUSER}" --extra-vars "ansible_password=${PASSWORD} ansible_become_password=${PASSWORD} ansible_port=2222" main.yml -i "127.0.0.1,"
