--- a/.github/workflows/mac-fedora.yml
+++ b/.github/workflows/mac-fedora.yml
@@ -30,10 +30,10 @@ jobs:
 
       - name: Stat Fedora VirtualBox VM
         env:
-          RAM: 2048
+          RAM: 4096
         run: |
           vagrant init fedora/32-cloud-base
-          sed -i "/Vagrant.configure(\"2\") do |config|/a \ \ config.vm.provider \"virtualbox\" do |vb|\n \ \ \ \ vb.memory = \"${RAM}\"\n \ end" Vagrantfile
+          sed -i '/Vagrant.configure("2") do |config|/a \ \ config.vm.provider "virtualbox" do |vb|\n \ \ \ \ vb.memory = "4096"\n \ end' Vagrantfile
           vagrant up
 
       - name: Add main user to Fedora VirtualBox VM
