--- a/.github/workflows/mac-fedora.yml
+++ b/.github/workflows/mac-fedora.yml
@@ -32,6 +32,7 @@ jobs:
         env:
           RAM: 4096
         run: |
+          set -x
           vagrant init fedora/32-cloud-base
           sed -i '/Vagrant.configure("2") do |config|/a \ \ config.vm.provider "virtualbox" do |vb|\n \ \ \ \ vb.memory = "4096"\n \ end' Vagrantfile
           vagrant up
